--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@supabase/supabase-js": "^2.95.3",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "resend": "^6.9.2",
+    "sweetalert2": "^11.26.18"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.3",
