--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/react": "^2.8.9",
+    "@heroui/theme": "^2.4.17",
     "@supabase/supabase-js": "^2.95.3",
+    "daisyui": "^4.12.24",
+    "framer-motion": "^12.34.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
